# Agent-Demo

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml
agent/: loop.py  prompt.py
docs/superpowers/specs/: 2026-05-28-memory-first-agent-design.md
llm/: client.py
memory/: longterm.py  project.py  session.py
storage/: db.py
tests/: conftest.py  test_config.py  test_main.py
tests/agent/: test_loop.py  test_prompt.py
tests/llm/: test_client.py
tests/memory/: test_longterm.py  test_project.py  test_session.py
tests/smoke/: test_imports.py
tests/storage/: test_db.py
tests/tools/: test_registry.py
tools/: registry.py
tools/builtin/: file_tools.py  memory_write.py  shell_tool.py  web_search.py
