[project]
name = "memory-first-agent"
version = "0.1.0"
description = "CLI-based personal assistant with project and long-term memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0,<1.0.0",
  "openai>=1.30.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<10.0.0",
  "pytest-asyncio>=0.23.0,<2.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
